--- a/source/feature/home/src/main/res/layout/item_station.xml
+++ b/source/feature/home/src/main/res/layout/item_station.xml
@@ -2,10 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginStart="4dp"
-    android:layout_marginEnd="4dp"
+    android:layout_marginStart="@dimen/margin_small"
+    android:layout_marginEnd="@dimen/margin_small"
     android:background="@drawable/bg_menu"
     android:maxWidth="400dp"
     android:maxHeight="250dp"
@@ -25,6 +26,7 @@
         android:layout_width="@dimen/button_medium_height"
         android:layout_height="@dimen/button_medium_height"
         android:background="?android:selectableItemBackground"
+        android:tint="@color/highEmphasisOnPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_star_empty" />
@@ -34,7 +36,7 @@
         style="@style/AppTheme.TextAppearance.Body1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
