Added search mechanism

--- a/source/common/uikit/src/main/res/values-night/colors.xml
+++ b/source/common/uikit/src/main/res/values-night/colors.xml
@@ -49,4 +49,5 @@
 
     <!--Station-->
     <color name="bgStationDisabled">@color/grey_900</color>
+    <color name="bgStationCurrent">@color/pale_blue_900</color>
 </resources>
