--- a/source/feature/home/src/main/res/layout/fragment_stations.xml
+++ b/source/feature/home/src/main/res/layout/fragment_stations.xml
@@ -131,7 +131,7 @@
             android:gravity="center"
             android:minWidth="50dp"
             android:padding="@dimen/margin_extra_small"
-            android:text="@{String.valueOf(viewModel.shuttle.damageCapacity)}"
+            android:text="@{String.valueOf(viewModel.damageLeft)}"
             app:layout_constraintBottom_toBottomOf="@id/tvName"
             app:layout_constraintEnd_toStartOf="@id/horizontalDivider2"
             app:layout_constraintTop_toTopOf="@id/tvName"
